# ML-Rust

./: Cargo.toml  boxplot_png  primer_grafico.html
data_analysis/: Cargo.toml
data_analysis/src/: lib.rs  main.rs
data_analysis/src/Graphics/: box_plot.rs  graphing_example.rs  horizontal_graph.rs  mod.rs
data_analysis/src/ML/: arima.rs  crossover_mutation.rs  genetic_optimizer.rs  mod.rs  satisfaccion.rs  selection.rs  testing.rs
data_analysis/src/Misc/: mod.rs  random_num.rs
data_analysis/src/arduino/: connection.rs  mod.rs  port.rs
data_analysis/src/utils/: random.rs
src/: lib.rs  main.rs
src/Graphics/: box_plot_ej.rs  graphing_example.rs  mod.rs
src/ML/: data_imputation.rs  mod.rs  tournament.rs
src/data/: csv_handler.rs
src/utils/: display.rs  mod.rs
