[package]
name = "El_Embebidos"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
rand = "0.8.5"
ndarray = "0.15.0"
ndarray-stats = "0.5.0"
gnuplot = "0.0.44"
serialport = "4.2.0"
csv = "1.1"
chrono = "0.4"
ndarray-linalg = {version = "0.16", features = ["openblas-system"]}

[[bin]]

name = "escribir_temp"
path = "src/bin/arduino_connection.rs"

[lib]

name = "arduino_rust"
path = "src/lib.rs"