[package]

name = "data_analysis"
version = "0.1.0"
edition = "2021"
license = "MIT"


[dependencies]

rand = "0.8.5"
ndarray = "0.15.0"
ndarray-stats = "0.5.0"
gnuplot = "0.0.44"
statrs = "0.16"
serialport = "4.2.0"
csv = "1.1"
chrono = "0.4"
ndarray-linalg = { version = "0.16", features = ["openblas-system"] }
plotters = "0.3"
arduino_control = { path = "../arduino_control" }


[lib]

name = "data_analysis"
path = "src/lib.rs"


